--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-python==3.12.0
-streamlit
-pandas
-numpy
-plotly
-warnings
-datetime
+pandas==2.1.4
+streamlit==1.29.0
+plotly==5.18.0
+matplotlib==3.8.0
 
